[gd_scene load_steps=2 format=3 uid="uid://djxja1xt1uopr"]

[ext_resource type="Script" uid="uid://cif3qmc74uljp" path="res://Characters/health_bar.gd" id="1_se3fb"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_se3fb")

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0.0980392, 0.745098, 0, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -22.0
offset_right = 67.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[connection signal="On_Health_Change" from="." to="." method="Update_Health_Bar"]
[connection signal="On_Health_initialization" from="." to="." method="Initialize_Progress_Bar_Stats"]
